[gd_scene load_steps=2 format=3 uid="uid://b2olnbe50ltxv"]

[ext_resource type="Script" path="res://Scenes/UI_Scenes/Scripts/range_create.gd" id="1_ojy7k"]

[node name="RangeCreate" type="Control"]
layout_mode = 3
anchor_right = 0.234
anchor_bottom = 0.111
offset_right = -16.2
offset_bottom = -7.88001
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_ojy7k")

[node name="RangeDropdown" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0246154
anchor_top = -0.259259
anchor_right = -0.0246154
anchor_bottom = -0.259259
offset_left = 8.87692
offset_top = 67.1852
offset_right = 294.877
offset_bottom = 98.1852
item_count = 10
selected = 0
popup/item_0/text = "2.5 (Yokai Hearing)"
popup/item_0/id = 0
popup/item_1/text = "3 (Crucifix Lv 1)"
popup/item_1/id = 1
popup/item_2/text = "4 (Crucifix Lv 2, Onryo Firelight)"
popup/item_2/id = 2
popup/item_3/text = "4.5 (Crucifix 1 - Demon)"
popup/item_3/id = 3
popup/item_4/text = "5 (Cruficix 3)"
popup/item_4/id = 4
popup/item_5/text = "6 (Crucifix 2 - Demon)"
popup/item_5/id = 5
popup/item_6/text = "7.5 (Cruficix 3 - Demon)"
popup/item_6/id = 6
popup/item_7/text = "10 (Normal Hearing)"
popup/item_7/id = 7
popup/item_8/text = "12 (Myling Footstep)"
popup/item_8/id = 8
popup/item_9/text = "15 (Raiju Electronic Hearing)"
popup/item_9/id = 9

[node name="RangeSelectHeader" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0246154
anchor_top = -0.259259
anchor_right = -0.0246154
anchor_bottom = -0.259259
offset_left = 8.87692
offset_top = 33.1852
offset_right = 164.877
offset_bottom = 61.1852
text = "Create Range Circle"

[node name="RangeCreate" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0246154
anchor_top = -0.259259
anchor_right = -0.0246154
anchor_bottom = -0.259259
offset_left = 231.877
offset_top = 105.185
offset_right = 294.877
offset_bottom = 136.185
text = "Create"

[node name="RangeColor" type="ColorPickerButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0246154
anchor_top = -0.259259
anchor_right = -0.0246154
anchor_bottom = -0.259259
offset_left = 183.877
offset_top = 105.185
offset_right = 218.877
offset_bottom = 137.185
color = Color(1, 1, 1, 1)

[node name="RangeClear" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0246154
anchor_top = -0.259259
anchor_right = -0.0246154
anchor_bottom = -0.259259
offset_left = 7.87692
offset_top = 105.185
offset_right = 69.8769
offset_bottom = 136.185
text = "Clear"

[node name="RangeCircles" type="CanvasLayer" parent="."]
layer = 3

[connection signal="pressed" from="RangeCreate" to="." method="_on_range_create_pressed"]
[connection signal="pressed" from="RangeCreate" to="RangeCreate" method="_on_pressed"]
[connection signal="pressed" from="RangeClear" to="." method="_on_range_clear_pressed"]
